# othello-tourney

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  README.md  Vagrantfile  celerybeat-schedule.bak  manage.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  run_ai_jailed.py  test.py  zensical.toml
.github/workflows/: ci.yml  docs.yml
ci/: spec.yml
config/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  postgres.sh  redis.sh
config/vagrant/: install_pyenv.sh  provision_vagrant.sh  setup_project.sh
docs/: index.md  submissions.md
docs/administrative/: tournaments.md
othello/: admin.py  asgi.py  celery.py  routing.py  test.py  urls.py  wsgi.py
othello/apps/: __init__.py  context_processors.py
othello/apps/auth/: apps.py  decorators.py  models.py  oauth.py  tests.py  urls.py  views.py
othello/apps/errors/: tests.py  views.py
othello/apps/games/: admin.py  apps.py  consumers.py  forms.py  models.py  ratings.py  routing.py  tasks.py  urls.py  utils.py  validators.py  views.py
othello/apps/rating/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
othello/apps/tournaments/: admin.py  apps.py  emails.py  forms.py  models.py  pairings.py  tasks.py  urls.py  utils.py  validators.py  views.py
othello/fixtures/: yourself.json
othello/models/: yourself.json
othello/moderator/: __init__.py  constants.py  jailed_runners.py  moderator.py  runners.py  utils.py
othello/othello/: asgi.py  celery.py  routing.py  test.py  urls.py  wsgi.py
othello/othello/moderator/: __init__.py  constants.py  moderator.py  runners.py  settings.py  test.py  utils.py  wrapper.py
othello/othello/sandboxing/: __init__.py  import_wrapper.py  sandbox.profile
othello/othello/settings/: __init__.py  secret.sample.py
othello/othello/static/: error.html
othello/othello/templates/: base.html
othello/sandboxing/: __init__.py  import_wrapper.py  sandbox.profile
othello/settings/: __init__.py  secret.sample.docker.py  secret.sample.py
othello/static/css/: base.css  upload.css
othello/static/js/: base.js  upload.js
othello/storage/: __init__.py
othello/templates/: 404.html  base.html
othello/templates/auth/: error.html  index.html  login.html  profile.html  rankings.html  rating.html
othello/templates/emails/: footer.html  footer.txt  tournament_finished.html  tournament_finished.txt  tournament_notfiy.html  tournament_notfiy.txt  tournament_notify.html  tournament_notify.txt  tournament_started.html  tournament_started.txt  winner.html  winner.txt
othello/test/: othello_test.py
scripts/: check.sh  format.sh  static_templates_format.sh
(+255 files in other folders)
