[project]
name = "othello"
description = "An autograder for Computer Science Classes"
readme = "README.md"
authors = [
    {name = "The TJHSST Computer Systems Lab", email = "othello@tjhsst.edu"},
]
requires-python = ">=3.13"
version = "1.0"
license = { file = "LICENSE" }
dependencies = [
    "celery>=5.6.2",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.0,<6.0.0",
    "django-celery-results>=2.6.0",
    "django-extensions>=4.1",
    "psutil>=7.2.1",
    "psycopg[binary]>=3.3.2",
    "redis>=7.1.0",
    "sentry-sdk>=2.49.0",
    "social-auth-app-django>=5.7.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
]

[tool.uv]
required-version = ">=0.9.0"

[tool.ruff]
extend-exclude = [
  ".github",
  ".env",
  "env",
  "secret",
  "media",
  "migrations",
  "submissions",
  "sandboxing",
]

show-fixes = false

line-length = 100

target-version = "py311"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # Pylint
    "PL",
    # pygrep hooks
    "PGH",
    # ruff
    "RUF",
    # pyupgrade
    "UP",
]
ignore = [
  # mutable class attrs annotated as typing.ClassVar
  "RUF012",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
  # not worth the effort to fix
  "PLR",
  "PLC0415",
]

[tool.codespell]
write-changes = true
# this has to be a string of the form a,b,c
# ignore-words-list = ""
# ignore comments like: # codespell: ignore
ignore-regex=".+# *codespell: *ignore.*"
